# AgentGuard

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  paper.bib  paper.md  pyproject.toml
.github/workflows/: tests.yml
cmake/: CompilerWarnings.cmake  Sanitizers.cmake
examples/: 01_basic_usage.cpp  02_llm_api_rate_limits.cpp  03_tool_sharing.cpp  04_priority_agents.cpp  05_adaptive_agents.cpp  CMakeLists.txt
include/agentguard/: agent.hpp  agentguard.hpp  config.hpp  delegation_tracker.hpp  demand_estimator.hpp  exceptions.hpp  monitor.hpp  policy.hpp  progress_tracker.hpp  request_queue.hpp  resource.hpp  resource_manager.hpp  safety_checker.hpp  types.hpp
include/agentguard/ai/: memory_pool.hpp  rate_limiter.hpp  token_budget.hpp  tool_slot.hpp
marketing/: blog_post.md  reddit_post.md  twitter_thread.md
paper/: agentguard.tex  references.bib
python/: CMakeLists.txt
python/agentguard/: __init__.py
python/agentguard/langgraph/: __init__.py  callback.py  decorator.py  guard.py  node.py
python/src/: bind_ai.cpp  bind_core.cpp  bind_forward.hpp  bind_monitors.cpp  bind_policies.cpp  bind_subsystems.cpp  bindings.cpp
python/tests/: conftest.py  test_bindings_basic.py  test_bindings_manager.py  test_bindings_monitors.py  test_bindings_subsystems.py  test_bindings_threading.py  test_langgraph_decorator.py  test_langgraph_guard.py  test_langgraph_node.py
src/: CMakeLists.txt  agent.cpp  config.cpp  delegation_tracker.cpp  demand_estimator.cpp  monitor.cpp  policy.cpp  progress_tracker.cpp  request_queue.cpp  resource.cpp  resource_manager.cpp  safety_checker.cpp
src/ai/: memory_pool.cpp  rate_limiter.cpp  token_budget.cpp  tool_slot.cpp
tests/: CMakeLists.txt
tests/integration/: test_adaptive_demands.cpp  test_concurrent_agents.cpp  test_deadlock_prevention.cpp  test_delegation_cycle.cpp  test_progress_monitor.cpp
tests/unit/: test_agent.cpp  test_delegation_tracker.cpp  test_demand_estimator.cpp  test_policy.cpp  test_probabilistic_safety.cpp  test_progress_tracker.cpp  test_request_queue.cpp  test_resource.cpp  test_resource_manager.cpp  test_safety_checker.cpp
